syntax = "proto3";

package aspb;

import "shpb/anime_trailer.proto";
import "aspb/anime_serie.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message CreateAnimeSerieTrailerRequest {
  int64    animeID                                = 1;
  repeated shpb.AnimeTrailerRequest animeTrailers = 2;
}

message CreateAnimeSerieTrailerResponse {
  AnimeSerieResponse animeSerie                    = 1;
  repeated shpb.AnimeTrailerResponse animeTrailers = 2;
}